footer section added and location parth dynamic here

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://i.ibb.co/tKVSCr8/Logo.png"
+      href="https://i.ibb.co/2yRfQFB/Rectangle-4281.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
